youtube: Fix non-thread-safe refcounting

Which could certainly cause a few bugs.

https://bugzilla.gnome.org/show_bug.cgi?id=741634